backend/registration-service/registration-service-chart/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    meta.helm.sh/release-name: "registration-service-server-internal"
    meta.helm.sh/release-namespace: "dsa-re-dev"
    # Indicate the ingress SHOULD speak TLS between itself and pods (best-practice)
    ingress.kubernetes.io/backend-protocol: "HTTPS"
  name: registration-service-server-internal
  labels:
    app.kubernetes.io/managed-by: "Helm"
spec:
  ingressClassName: "nginx-internal"
  rules:
  - host: "registration-service.dev.dsa-re-notprod.homeoffice.gov.uk"
    http:
      paths:
      - backend:
          service:
            name: registration-service
            port:
              number: 80
        path: /
        pathType: Prefix
